--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_pagination
 description: A new Flutter package .
 version: 0.0.1
-homepage:
+homepage: https://github.com/Prituljogia/flutter_pagination.git
 
 environment:
   sdk: '>=2.19.1 <3.0.0'
