--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,11 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  sliver_tools: ^0.2.5
   pull_to_refresh: ^2.0.0
   flutter:
     sdk: flutter
+  http: ^0.13.5
 
 
 
